# Metamod-SDK

./: .gitignore  CMakeLists.txt  Metamod SDK.sln
cmake/: Intel.cmake
metamod/include/metamod/: api.h  engine.h  engine_hooks.h  gamedll_hooks.h  metamod_config.h  os_defs.h  os_dep.h  utils.h
metamod/src/: api.cpp  engine_hooks.cpp  export.cpp  gamedll_hooks.cpp
msvc/: Metamod SDK.vcxproj  Metamod SDK.vcxproj.filters  metamodsdk_mm.def
msvc/PropertySheets/: UserMacros.props
